2003-08-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.7; this release
	only contains the fix for Boostrap.pm and is otherwise unchanged

2003-08-14  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.6

2003-07-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.5; this release
	contains a fix for spurious output from the cctools -single_module
	check

2003-07-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.4; this release
	does not contain the 10.3-ready code or the fink-prebinding

2003-07-07  Peter O'Gorman <ogorman@users.sourceforge.net>

	* fink-virtual-pkgs.in: Made this more bulletproof.

2003-07-06  Peter O'Gorman <ogorman@users.sourceforge.net>

	* fink-virtual-pkgs.in, bootstrap.pl, inject.pl, install.sh, setup.sh:
	add "fink-virtual-pkgs" to the distribution for use by new apt and dpkg.

2003-06-19  Dave Morrison <dmrrsn@users.sourceforge.net>

	* postinstall.pl.in: remove a warning under 5.8.x

2003-06-19  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.3

2003-06-19  Dave Morrison <dmrrsn@users.sourceforge.net>

	* bootstrap.pl:  Allow bootstrapping with perl 5.6.1 (subjected
	to a test to make sure /usr/bin/perl5.6.1 is functional)

2003-06-16  Dave Morrison <dmrrsn@users.sourceforge.net>

	* merged release_0_13_2 branch back into HEAD; the 0.13.2 release
	contained only today's pathsetup.command change, not the earlier 
	changes

2003-06-16  Dave Morrison <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.13.2

2003-06-16  Dave Morrison <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, inject.pl, install.sh, pathsetup.command.in, setup.sh:
	add the "pathsetup.command" shell script, to be installed along with
	fink, which helps users set their paths
